# waste-collection-and-recycling

./: .gitignore  CMakeLists.txt  CORRECTIONS.md  GUIDE_UTILISATEUR.md  Loginwindow.cpp  Loginwindow.h  NOTES_TECHNIQUES.md  README.md  README_INTEGRATION.md  connection  connection.cpp  connection.h  employepages.cpp  employepages.h  employepages.ui  fix_compilation_errors.sh  gestionpoubellepages.cpp  gestionpoubellepages.h  gestionpoubellepages.ui  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  poubelle.cpp  poubelle.h  resources.qrc  zone.cpp  zone.h  zonepages.cpp  zonepages.h
.qtcreator/: CMakeLists.txt.user.5cc1518  CMakeLists.txt.user.8c1e55f  CMakeLists.txt.user.f9d2a03
